<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".FoodIntake">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="550dp"
        app:cardCornerRadius="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="30dp">


            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="290dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="#409215"
                    android:fontFamily="@font/glacial_indifference_bold"
                    android:text="@string/save"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_gravity="start"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="#FF1616"
                    android:fontFamily="@font/glacial_indifference_bold"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />
            </FrameLayout>

            <ImageView
                android:id="@+id/food_intake_logo"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:contentDescription="@string/display"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036"
                app:srcCompat="@drawable/food_intake_logo" />

            <TextView
                android:id="@+id/meals_per_day_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/glacial_indifference_bold"
                android:gravity="center"
                android:orientation="vertical"
                android:text="Meals Per Day"
                android:textColor="#2C275F"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_intake_logo" />

            <Spinner
                android:id="@+id/meals_per_day_button"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/food_intake_spinner_up"
                android:dropDownWidth="match_parent"
                android:dropDownHeight="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:overlapAnchor="false"
                android:popupBackground="@color/gray"
                android:popupElevation="4dp"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meals_per_day_text" />


            <TextView
                android:id="@+id/eating_intervals_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/glacial_indifference_bold"
                android:orientation="vertical"
                android:text="Eating Interval"
                android:textColor="#2C275F"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meals_per_day_button" />

            <Spinner
                android:id="@+id/eating_intervals_button"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/food_intake_spinner_up"
                android:dropDownWidth="match_parent"
                android:dropDownHeight="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:overlapAnchor="false"
                android:popupBackground="@color/gray"
                android:popupElevation="4dp"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eating_intervals_text"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/meal_hour_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/glacial_indifference_bold"
                android:orientation="vertical"
                android:text="Mealtime Reminder"
                android:textColor="#2C275F"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eating_intervals_button" />

            <Spinner
                android:id="@+id/first_reminder_button"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/food_intake_spinner_up"
                android:dropDownHeight="150dp"
                android:dropDownVerticalOffset="50dp"
                android:gravity="center"
                android:orientation="vertical"
                android:overlapAnchor="false"
                android:popupBackground="@color/gray"
                android:popupElevation="4dp"
                android:spinnerMode="dropdown"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meal_hour_text"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>